# deseweb-garagem

./: db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_acessorio_cor.py  0002_veiculo_capa.py  0003_compra.py  0003_veiculo.py  0004_itenscompra.py  0004_veiculo_ano.py  0005_modelo_remove_itenscompra_compra_and_more.py  0005_veiculo_modelo_alter_veiculo_categoria_and_more.py  0006_alter_acessorio_options_alter_cor_options_and_more.py  0006_veiculo_descricao_alter_veiculo_acessorios_and_more.py
garagem/models/: __init__.py  acessorio.py  categoria.py  compra.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: __init__.py  veiculo.py
garagem/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
